--- a/add.html
+++ b/add.html
@@ -8,7 +8,7 @@
         </div>
         <div class="note">
             <div>
-                <h3>TODO:</h3>
+                <h3>TODO :):</h3>
                 
             </div>
 
