--- a/add.html
+++ b/add.html
@@ -1,5 +1,5 @@
 
-    <div class="todo-container">
+    <div id="todo-container">
         <form>
         <div class="time">
             <h3>Date:</h3>
@@ -8,7 +8,7 @@
         </div>
         <div class="note">
             <div>
-                <h3>TODO :):</h3>
+                <h3>TODO:</h3>
                 
             </div>
 
