--- a/add.html
+++ b/add.html
@@ -1,5 +1,5 @@
 
-    <div id="todo-container">
+    <div class="todo-container">
         <form>
         <div class="time">
             <h3>Date:</h3>
