szebbek lettek a noteok today oldalon is

--- a/today.html
+++ b/today.html
@@ -4,36 +4,36 @@
 </div> 
 <table>
   <tr id="firstrow">
-    <td id="1" class="dawn"></td>
-    <td class="morning"></td>
-    <td class="forenoon"></td>
-    <td class="afternoon"></td>
-    <td class="night"></td>
-    <td class="right latenight"></td>
+    <td id="1" class="dawn"><div></div></td>
+    <td class="morning"><div></div></td>
+    <td class="forenoon"><div></div></td>
+    <td class="afternoon"><div></div></td>
+    <td class="night"><div></div></td>
+    <td class="right latenight"><div>""</div></td>
   </tr>
   <tr id="secondrow">
-      <td class="dawn"></td>
-      <td class="morning"></td>
-      <td class="forenoon"></td>
-      <td class="afternoon"></td>
-      <td class="night"></td>
-      <td class="right latenight"></td>
+      <td class="dawn"><div></div></td>
+      <td class="morning"><div></div></td>
+      <td class="forenoon"><div></div></td>
+      <td class="afternoon"><div></div></td>
+      <td class="night"><div></div></td>
+      <td class="right latenight"><div></div></td>
     </tr>
     <tr id="thirdrow">
-      <td class="dawn"></td>
-      <td class="morning"></td>
-      <td class="forenoon"></td>
-      <td class="afternoon"></td>
-      <td class="night"></td>
-      <td class="right latenight"></td>
+      <td class="dawn"><div></div></td>
+      <td class="morning"><div></div></td>
+      <td class="forenoon"><div></div></td>
+      <td class="afternoon"><div></div></td>
+      <td class="night"><div></div></td>
+      <td class="right latenight"><div></div></td>
     </tr>
     <tr id="lastrow">
-      <td class="dawn"></td>
-      <td class="morning"></td>
-      <td class="forenoon"></td>
-      <td class="afternoon"></td>
-      <td class="night"></td>
-      <td class="right latenight"></td>
+      <td class="dawn"><div></div></td>
+      <td class="morning"><div></div></td>
+      <td class="forenoon"><div></div></td>
+      <td class="afternoon"><div></div></td>
+      <td class="night"><div></div></td>
+      <td class="right latenight"><div></div></td>
     </tr>
   <div class="flipping">
   <a href="" id="button1" class="prevButton">Previous</a>
