--- a/add.html
+++ b/add.html
@@ -6,7 +6,7 @@
             <input type="datetime-local" name="time">
 
         </div>
-        <div class="note">
+        <div class="note-container">
             <div>
                 <h3>TODO:</h3>
                 
@@ -31,58 +31,58 @@
             <div class="topic-container">
                 <table>
                     <tr>
-                        <td class="asd">
+                        <td class="topic-table">
                             <ul>
                             <li>
                                 <input id="topics-IT" name="topics" type="checkbox" value="IT"/>
-                            <label class="container" for="topics-IT">IT</label>
+                            <label class="container1" for="topics-IT">IT</label>
                                 <span class="checkmark"></span>
                               </label>
                             </li>
                             <li>
                                 <input id="topics-hobby" name="topics" type="checkbox" value="hobby"/>
-                                <label class="container" for="topics-hobby">Hobby</label>
+                                <label class="container1" for="topics-hobby">Hobby</label>
                                     <span class="checkmark"></span>
                                   </label>
                             </li>
                             <li>
                                 <input id="topics-sport" name="topics" type="checkbox" value="sport"/>
-                            <label class="container" for="topics-sport">Sport</label>
+                            <label class="container1" for="topics-sport">Sport</label>
                                 <span class="checkmark"></span>
                               </label>
                             </li>
                            <li>
                             <input id="topics-cooking" name="topics" type="checkbox" value="cooking"/>
-                            <label class="container" for="topics-cooking">Cooking</label>
+                            <label class="container1" for="topics-cooking">Cooking</label>
                             <span class="checkmark"></span>
                               </label>
                            </li>
                         </ul>
                         </td>
-                        <td class="asd">
+                        <td class="topic-table">
                             <ul>
                     
                                 <li>
                                     <input id="topics-health" name="topics" type="checkbox" value="Health"/>
-                                    <label class="container" for="topics-health">Health</label>
+                                    <label class="container1" for="topics-health">Health</label>
                                 <span class="checkmark"></span>
                               </label>
                                 </li>
                                 <li>
                                     <input id="topics-shopping" name="topics" type="checkbox" value="shopping"/>
-                            <label class="container" for="topics-shopping">Shopping</label>
+                            <label class="container1" for="topics-shopping">Shopping</label>
                                 <span class="checkmark"></span>
                               </label>
                                 </li>
                                 <li>
                                     <input id="topics-social" name="topics" type="checkbox" value="social"/>
-                                    <label class="container" for="topics-social">Social</label>
+                                    <label class="container1" for="topics-social">Social</label>
                                 <span class="checkmark"></span>
                               </label>
                                 </li>
                                 <li>
                                     <input id="topics-work" name="topics" type="checkbox" value="work"/>
-                                    <label class="container" for="topics-work">Work</label>
+                                    <label class="container1" for="topics-work">Work</label>
                                 <span class="checkmark"></span>
                               </label>
                                 </li>
