--- a/search.html
+++ b/search.html
@@ -68,5 +68,6 @@
             </tr>
         </table>
     </div>
-    <script type="text/javascript" src="search.js"></script>
+    <div id="todo-container" class="modal">
+    </div>
     
