--- a/weekly.html
+++ b/weekly.html
@@ -20,4 +20,5 @@
     <a href="" id="button2" class="nextButton">Next</a>
     </div>
   </table>
-
+  <div id="todo-container" class="modal">
+</div>
