kattolható noteok adatokkal

--- a/edit.html
+++ b/edit.html
@@ -4,7 +4,7 @@
 
                 <div class="time">
                     <h3>Date:</h3>
-                    <input type="datetime-local">
+                    <input class="datetime" type="datetime-local">
                 </div>
                 <div class="note">
                     <div>
